# CustomPiOS

./: .gitignore  README.rst  pyproject.toml
.github/workflows/: docker-build.yml
src/: Dockerfile  Dockerfile.arm32v7  Dockerfile.arm64v8  argparse.bash  base_image_downloader.py  base_image_downloader_wrapper.sh  build  build_custom_os  build_docker  chroot_in_to_image.sh  chroot_script  common.py  common.sh  config  config_sanity  custompios  docker-compose.yml  execution_order.py  get_remote_modules.py  images.yml  make_custom_pi_os  make_rpi-imager-snipplet.py  modules_remote.yml  multi-arch-manifest.yaml  qemu_boot.sh  qemu_boot64.sh  release  requirements-devel.txt  update-custompios-paths  update-custompios-paths.ps1
src/custompios_core/: base_image_downloader.py  common.py  generate_board_config.py  get_remote_modules.py  list_boards.py  make_rpi-imager-snipplet.py  multi-arch-manifest.yaml  multi_build.py
src/dist_generators/: dist_example_script
src/docker/: Dockerfile  docker-compose.yml
src/hooks/: post_push
src/misc/jenkins-ci/: console_parsing
src/modules/admin-toolkit/: config  start_chroot_script
src/modules/apt-install/: config  start_chroot_script
src/modules/auto-hotspot/: config  start_chroot_script
src/modules/auto-mount-removable/: start_chroot_script
src/modules/base/: config  end_chroot_script  meta  start_chroot_script
src/modules/cockpit-install/: config  start_chroot_script
src/modules/default-user/: config  start_chroot_script
src/nightly_build_scripts/: custompios_nightly_build  octopi_nightly_build
(+97 files in other folders)
